 * UCS min_sstable_size should not be lower than target_sstable_size lower bound (CASSANDRA-19112)
 * Fix the correspondingMessagingVersion of SSTable format and improve TTL overflow tests coverage (CASSANDRA-19197)
 * Fix resource cleanup after SAI query timeouts (CASSANDRA-19177)
 * Suppress CVE-2023-6481 (CASSANDRA-19184)
Merged from 4.1:
 * Concurrent equivalent schema updates lead to unresolved disagreement (CASSANDRA-19578)
 * Fix hints delivery for a node going down repeatedly (CASSANDRA-19495)
 * Do not go to disk for reading hints file sizes (CASSANDRA-19477)
 * Fix system_views.settings to handle array types (CASSANDRA-19475)
 * Memoize Cassandra verion and add a backoff interval for failed schema pulls (CASSANDRA-18902)
 * Fix StackOverflowError on ALTER after many previous schema changes (CASSANDRA-19166)
Merged from 4.0:
 * Streaming exception race creates corrupt transaction log files that prevent restart (CASSANDRA-18736)
 * Fix CQL tojson timestamp output on negative timestamp values before Gregorian calendar reform in 1582 (CASSANDRA-19566)
 * Fix few types issues and implement types compatibility tests (CASSANDRA-19479)
 * Change logging to TRACE when failing to get peer certificate (CASSANDRA-19508)
 * Push LocalSessions info logs to debug (CASSANDRA-18335)
 * Filter remote DC replicas out when constructing the initial replica plan for the local read repair (CASSANDRA-19120)
 * Remove redundant code in StorageProxy#sendToHintedReplicas (CASSANDRA-19412)
 * Remove bashisms for mx4j tool in cassandra-env.sh (CASSANDRA-19416)
 * Add new concurrent_merkle_tree_requests config property to prevent OOM during multi-range and/or multi-table repairs (CASSANDRA-19336)
 * Skip version check if an endpoint is dead state in Gossiper#upgradeFromVersionSupplier (CASSANDRA-19187)
 * Fix Gossiper::hasMajorVersion3Nodes to return false during minor upgrade (CASSANDRA-18999)